# proteomics_data_pipeline

./: .gitignore  Dockerfile  GETTING_STARTED.md  README.md  Snakefile  pyproject.toml  requirements-dev.txt  requirements.txt  test_pride_client.py
config/: config.yaml
docs/development/: CHANGELOG.md  DECISIONS.md  LEARNING_LOG.md  PROJECT_ROADMAP.md
docs/resources/: proteomics_primer.md  useful_links.md
docs/user_guide/: installation.md  quickstart.md
notebooks/: 01_data_acquisition_demo.ipynb
scripts/: download_dataset.py  run_full_pipeline.py
src/: __init__.py
src/analysis/: __init__.py  differential_expression.py  statistics.py
src/data_acquisition/: __init__.py  dataset_downloader.py  file_parser.py  pride_api.py
src/data_processing/: __init__.py  cleaner.py  normalizer.py  transformer.py
src/quality_control/: __init__.py  qc_metrics.py  qc_reporter.py
src/reporting/: __init__.py  html_reporter.py
src/utils/: __init__.py  file_handler.py  logger.py  validators.py
src/visualization/: __init__.py  heatmap.py  pca_plot.py  volcano_plot.py
tests/: conftest.py  test_utils.py
tests/test_data_acquisition/: test_file_parser.py  test_pride_api.py
